hy340/phase4-5/Phase_D/parser.output
Terminals unused in grammar

   SINGLE_LINE_COMMENT
   NESTED_COMMENT
   number


State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmts stmt
    3      | %empty

    4 stmt: expr ';'
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | BREAK ';'
   10     | CONTINUE ';'
   11     | block
   12     | funcdef
   13     | ';'

   14 expr: assignexpr
   15     | expr '+' expr
   16     | expr '-' expr
   17     | expr '*' expr
   18     | expr '/' expr
   19     | expr '%' expr
   20     | expr GT expr
   21     | expr GE expr
   22     | expr LT expr
   23     | expr LE expr
   24     | expr EQ expr
   25     | expr NE expr
   26     | expr OR D expr
   27     | expr AND D expr
   28     | term

   29 D: %empty

   30 term: '(' expr ')'
   31     | '-' expr
   32     | NOT expr
   33     | PLUSPLUS lvalue
   34     | lvalue PLUSPLUS
   35     | MINUSMINUS lvalue
   36     | lvalue MINUSMINUS
   37     | primary

   38 assignexpr: lvalue '=' expr

   39 primary: lvalue
   40        | call
   41        | objectdef
   42        | '(' funcdef ')'
   43        | const

   44 lvalue: ID
   45       | LOCAL ID
   46       | COLONCOLON ID
   47       | member

   48 member: lvalue '.' ID
   49       | lvalue '[' expr ']'
   50       | call '.' ID
   51       | call '[' expr ']'

   52 call: call '(' elist ')'
   53     | lvalue callsuffix
   54     | '(' funcdef ')' '(' elist ')'

   55 callsuffix: normcall
   56           | methodcall

   57 normcall: '(' elist ')'

   58 methodcall: DOTDOT ID '(' elist ')'

   59 elist: expr
   60      | elist ',' expr
   61      | %empty

   62 $@1: %empty

   63 objectdef: '[' $@1 elist ']'
   64          | '[' indexed ']'

   65 indexed: indexedelem
   66        | indexed ',' indexedelem

   67 $@2: %empty

   68 indexedelem: '{' $@2 expr ':' expr '}'

   69 $@3: %empty

   70 block: '{' $@3 stmts '}'

   71 funcname: ID
   72         | %empty

   73 funcprefix: FUNCTION funcname

   74 $@4: %empty

   75 $@5: %empty

   76 funcargs: '(' $@4 idlist ')' $@5

   77 funcbody: block

   78 funcdef: funcprefix funcargs funcbody

   79 const: INTEGER
   80      | STRING
   81      | NIL
   82      | TRUE
   83      | FALSE
   84      | REAL

   85 idlist: ID
   86       | idlist ',' ID
   87       | %empty

   88 $@6: %empty

   89 ifprefix: IF $@6 '(' expr ')'

   90 elseprefix: ELSE

   91 ifstmt: ifprefix stmt

   92 $@7: %empty

   93 ifstmt: ifprefix stmt elseprefix stmt $@7

   94 whilestmt: whilestart whilecond stmt

   95 whilestart: WHILE

   96 whilecond: '(' expr ')'

   97 N: %empty

   98 M: %empty

   99 $@8: %empty

  100 forprefix: FOR $@8 '(' elist ';' M expr ';'

  101 $@9: %empty

  102 forstmt: forprefix N elist ')' N stmt $@9 N

  103 returnstmt: RETURN expr ';'
  104           | RETURN ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 19
'(' (40) 30 42 52 54 57 58 76 89 96 100
')' (41) 30 42 52 54 57 58 76 89 96 102
'*' (42) 17
'+' (43) 15
',' (44) 60 66 86
'-' (45) 16 31
'.' (46) 48 50
'/' (47) 18
':' (58) 68
';' (59) 4 9 10 13 100 103 104
'=' (61) 38
'[' (91) 49 51 63 64
']' (93) 49 51 63 64
'{' (123) 68 70
'}' (125) 68 70
error (256)
IF (258) 89
ELSE (259) 90
WHILE (260) 95
FOR (261) 100
FUNCTION (262) 73
RETURN (263) 103 104
BREAK (264) 9
CONTINUE (265) 10
AND (266) 27
NOT (267) 32
OR (268) 26
LOCAL (269) 45
TRUE (270) 82
FALSE (271) 83
NIL (272) 81
EQ (273) 24
NE (274) 25
LT (275) 22
GT (276) 20
GE (277) 21
LE (278) 23
PLUSPLUS (279) 33 34
MINUSMINUS (280) 35 36
COLONCOLON (281) 46
DOTDOT (282) 58
SINGLE_LINE_COMMENT (283)
NESTED_COMMENT (284)
ID (285) 44 45 46 48 50 58 71 85 86
STRING (286) 80
INTEGER (287) 79
REAL (288) 84
number (289)
UMINUS (290)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
stmts (54)
    on left: 2 3, on right: 1 2 70
stmt (55)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 91 93 94 102
expr (56)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    4 15 16 17 18 19 20 21 22 23 24 25 26 27 30 31 32 38 49 51 59 60
    68 89 96 100 103
D (57)
    on left: 29, on right: 26 27
term (58)
    on left: 30 31 32 33 34 35 36 37, on right: 28
assignexpr (59)
    on left: 38, on right: 14
primary (60)
    on left: 39 40 41 42 43, on right: 37
lvalue (61)
    on left: 44 45 46 47, on right: 33 34 35 36 38 39 48 49 53
member (62)
    on left: 48 49 50 51, on right: 47
call (63)
    on left: 52 53 54, on right: 40 50 51 52
callsuffix (64)
    on left: 55 56, on right: 53
normcall (65)
    on left: 57, on right: 55
methodcall (66)
    on left: 58, on right: 56
elist (67)
    on left: 59 60 61, on right: 52 54 57 58 60 63 100 102
objectdef (68)
    on left: 63 64, on right: 41
$@1 (69)
    on left: 62, on right: 63
indexed (70)
    on left: 65 66, on right: 64 66
indexedelem (71)
    on left: 68, on right: 65 66
$@2 (72)
    on left: 67, on right: 68
block (73)
    on left: 70, on right: 11 77
$@3 (74)
    on left: 69, on right: 70
funcname (75)
    on left: 71 72, on right: 73
funcprefix (76)
    on left: 73, on right: 78
funcargs (77)
    on left: 76, on right: 78
$@4 (78)
    on left: 74, on right: 76
$@5 (79)
    on left: 75, on right: 76
funcbody (80)
    on left: 77, on right: 78
funcdef (81)
    on left: 78, on right: 12 42 54
const (82)
    on left: 79 80 81 82 83 84, on right: 43
idlist (83)
    on left: 85 86 87, on right: 76 86
ifprefix (84)
    on left: 89, on right: 91 93
$@6 (85)
    on left: 88, on right: 89
elseprefix (86)
    on left: 90, on right: 93
ifstmt (87)
    on left: 91 93, on right: 5
$@7 (88)
    on left: 92, on right: 93
whilestmt (89)
    on left: 94, on right: 6
whilestart (90)
    on left: 95, on right: 94
whilecond (91)
    on left: 96, on right: 94
N (92)
    on left: 97, on right: 102
M (93)
    on left: 98, on right: 100
forprefix (94)
    on left: 100, on right: 102
$@8 (95)
    on left: 99, on right: 100
forstmt (96)
    on left: 102, on right: 7
$@9 (97)
    on left: 101, on right: 102
returnstmt (98)
    on left: 103 104, on right: 8


State 0

    0 $accept: . program $end
    1 program: . stmts
    2 stmts: . stmts stmt
    3      | . %empty

    $default  reduce using rule 3 (stmts)

    program  go to state 1
    stmts    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmts .  [$end]
    2 stmts: stmts . stmt
    4 stmt: . expr ';'
    5     | . ifstmt
    6     | . whilestmt
    7     | . forstmt
    8     | . returnstmt
    9     | . BREAK ';'
   10     | . CONTINUE ';'
   11     | . block
   12     | . funcdef
   13     | . ';'
   14 expr: . assignexpr
   15     | . expr '+' expr
   16     | . expr '-' expr
   17     | . expr '*' expr
   18     | . expr '/' expr
   19     | . expr '%' expr
   20     | . expr GT expr
   21     | . expr GE expr
   22     | . expr LT expr
   23     | . expr LE expr
   24     | . expr EQ expr
   25     | . expr NE expr
   26     | . expr OR D expr
   27     | . expr AND D expr
   28     | . term
   30 term: . '(' expr ')'
   31     | . '-' expr
   32     | . NOT expr
   33     | . PLUSPLUS lvalue
   34     | . lvalue PLUSPLUS
   35     | . MINUSMINUS lvalue
   36     | . lvalue MINUSMINUS
   37     | . primary
   38 assignexpr: . lvalue '=' expr
   39 primary: . lvalue
   40        | . call
   41        | . objectdef
   42        | . '(' funcdef ')'
   43        | . const
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'
   63 objectdef: . '[' $@1 elist ']'
   64          | . '[' indexed ']'
   70 block: . '{' $@3 stmts '}'
   73 funcprefix: . FUNCTION funcname
   78 funcdef: . funcprefix funcargs funcbody
   79 const: . INTEGER
   80      | . STRING
   81      | . NIL
   82      | . TRUE
   83      | . FALSE
   84      | . REAL
   89 ifprefix: . IF $@6 '(' expr ')'
   91 ifstmt: . ifprefix stmt
   93       | . ifprefix stmt elseprefix stmt $@7
   94 whilestmt: . whilestart whilecond stmt
   95 whilestart: . WHILE
  100 forprefix: . FOR $@8 '(' elist ';' M expr ';'
  102 forstmt: . forprefix N elist ')' N stmt $@9 N
  103 returnstmt: . RETURN expr ';'
  104           | . RETURN ';'

    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    FUNCTION    shift, and go to state 7
    RETURN      shift, and go to state 8
    BREAK       shift, and go to state 9
    CONTINUE    shift, and go to state 10
    NOT         shift, and go to state 11
    LOCAL       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    NIL         shift, and go to state 15
    '-'         shift, and go to state 16
    PLUSPLUS    shift, and go to state 17
    MINUSMINUS  shift, and go to state 18
    '{'         shift, and go to state 19
    '['         shift, and go to state 20
    '('         shift, and go to state 21
    ';'         shift, and go to state 22
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24
    STRING      shift, and go to state 25
    INTEGER     shift, and go to state 26
    REAL        shift, and go to state 27

    $default  reduce using rule 1 (program)

    stmt        go to state 28
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcprefix  go to state 38
    funcdef     go to state 39
    const       go to state 40
    ifprefix    go to state 41
    ifstmt      go to state 42
    whilestmt   go to state 43
    whilestart  go to state 44
    forprefix   go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 3

    0 $accept: program $end .

    $default  accept


State 4

   88 $@6: . %empty
   89 ifprefix: IF . $@6 '(' expr ')'

    $default  reduce using rule 88 ($@6)

    $@6  go to state 48


State 5

   95 whilestart: WHILE .

    $default  reduce using rule 95 (whilestart)


State 6

   99 $@8: . %empty
  100 forprefix: FOR . $@8 '(' elist ';' M expr ';'

    $default  reduce using rule 99 ($@8)

    $@8  go to state 49


State 7

   71 funcname: . ID
   72         | . %empty  ['(']
   73 funcprefix: FUNCTION . funcname

    ID  shift, and go to state 50

    $default  reduce using rule 72 (funcname)

    funcname  go to state 51


State 8

   14 expr: . assignexpr
   15     | . expr '+' expr
   16     | . expr '-' expr
   17     | . expr '*' expr
   18     | . expr '/' expr
   19     | . expr '%' expr
   20     | . expr GT expr
   21     | . expr GE expr
   22     | . expr LT expr
   23     | . expr LE expr
   24     | . expr EQ expr
   25     | . expr NE expr
   26     | . expr OR D expr
   27     | . expr AND D expr
   28     | . term
   30 term: . '(' expr ')'
   31     | . '-' expr
   32     | . NOT expr
   33     | . PLUSPLUS lvalue
   34     | . lvalue PLUSPLUS
   35     | . MINUSMINUS lvalue
   36     | . lvalue MINUSMINUS
   37     | . primary
   38 assignexpr: . lvalue '=' expr
   39 primary: . lvalue
   40        | . call
   41        | . objectdef
   42        | . '(' funcdef ')'
   43        | . const
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'
   63 objectdef: . '[' $@1 elist ']'
   64          | . '[' indexed ']'
   79 const: . INTEGER
   80      | . STRING
   81      | . NIL
   82      | . TRUE
   83      | . FALSE
   84      | . REAL
  103 returnstmt: RETURN . expr ';'
  104           | RETURN . ';'

    NOT         shift, and go to state 11
    LOCAL       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    NIL         shift, and go to state 15
    '-'         shift, and go to state 16
    PLUSPLUS    shift, and go to state 17
    MINUSMINUS  shift, and go to state 18
    '['         shift, and go to state 20
    '('         shift, and go to state 21
    ';'         shift, and go to state 52
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24
    STRING      shift, and go to state 25
    INTEGER     shift, and go to state 26
    REAL        shift, and go to state 27

    expr        go to state 53
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 40


State 9

    9 stmt: BREAK . ';'

    ';'  shift, and go to state 54


State 10

   10 stmt: CONTINUE . ';'

    ';'  shift, and go to state 55


State 11

   14 expr: . assignexpr
   15     | . expr '+' expr
   16     | . expr '-' expr
   17     | . expr '*' expr
   18     | . expr '/' expr
   19     | . expr '%' expr
   20     | . expr GT expr
   21     | . expr GE expr
   22     | . expr LT expr
   23     | . expr LE expr
   24     | . expr EQ expr
   25     | . expr NE expr
   26     | . expr OR D expr
   27     | . expr AND D expr
   28     | . term
   30 term: . '(' expr ')'
   31     | . '-' expr
   32     | . NOT expr
   32     | NOT . expr
   33     | . PLUSPLUS lvalue
   34     | . lvalue PLUSPLUS
   35     | . MINUSMINUS lvalue
   36     | . lvalue MINUSMINUS
   37     | . primary
   38 assignexpr: . lvalue '=' expr
   39 primary: . lvalue
   40        | . call
   41        | . objectdef
   42        | . '(' funcdef ')'
   43        | . const
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'
   63 objectdef: . '[' $@1 elist ']'
   64          | . '[' indexed ']'
   79 const: . INTEGER
   80      | . STRING
   81      | . NIL
   82      | . TRUE
   83      | . FALSE
   84      | . REAL

    NOT         shift, and go to state 11
    LOCAL       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    NIL         shift, and go to state 15
    '-'         shift, and go to state 16
    PLUSPLUS    shift, and go to state 17
    MINUSMINUS  shift, and go to state 18
    '['         shift, and go to state 20
    '('         shift, and go to state 21
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24
    STRING      shift, and go to state 25
    INTEGER     shift, and go to state 26
    REAL        shift, and go to state 27

    expr        go to state 56
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 40


State 12

   45 lvalue: LOCAL . ID

    ID  shift, and go to state 57


State 13

   82 const: TRUE .

    $default  reduce using rule 82 (const)


State 14

   83 const: FALSE .

    $default  reduce using rule 83 (const)


State 15

   81 const: NIL .

    $default  reduce using rule 81 (const)


State 16

   14 expr: . assignexpr
   15     | . expr '+' expr
   16     | . expr '-' expr
   17     | . expr '*' expr
   18     | . expr '/' expr
   19     | . expr '%' expr
   20     | . expr GT expr
   21     | . expr GE expr
   22     | . expr LT expr
   23     | . expr LE expr
   24     | . expr EQ expr
   25     | . expr NE expr
   26     | . expr OR D expr
   27     | . expr AND D expr
   28     | . term
   30 term: . '(' expr ')'
   31     | . '-' expr
   31     | '-' . expr
   32     | . NOT expr
   33     | . PLUSPLUS lvalue
   34     | . lvalue PLUSPLUS
   35     | . MINUSMINUS lvalue
   36     | . lvalue MINUSMINUS
   37     | . primary
   38 assignexpr: . lvalue '=' expr
   39 primary: . lvalue
   40        | . call
   41        | . objectdef
   42        | . '(' funcdef ')'
   43        | . const
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'
   63 objectdef: . '[' $@1 elist ']'
   64          | . '[' indexed ']'
   79 const: . INTEGER
   80      | . STRING
   81      | . NIL
   82      | . TRUE
   83      | . FALSE
   84      | . REAL

    NOT         shift, and go to state 11
    LOCAL       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    NIL         shift, and go to state 15
    '-'         shift, and go to state 16
    PLUSPLUS    shift, and go to state 17
    MINUSMINUS  shift, and go to state 18
    '['         shift, and go to state 20
    '('         shift, and go to state 21
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24
    STRING      shift, and go to state 25
    INTEGER     shift, and go to state 26
    REAL        shift, and go to state 27

    expr        go to state 58
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 40


State 17

   33 term: PLUSPLUS . lvalue
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'

    LOCAL       shift, and go to state 12
    '('         shift, and go to state 59
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24

    lvalue  go to state 60
    member  go to state 34
    call    go to state 61


State 18

   35 term: MINUSMINUS . lvalue
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'

    LOCAL       shift, and go to state 12
    '('         shift, and go to state 59
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24

    lvalue  go to state 62
    member  go to state 34
    call    go to state 61


State 19

   69 $@3: . %empty
   70 block: '{' . $@3 stmts '}'

    $default  reduce using rule 69 ($@3)

    $@3  go to state 63


State 20

   62 $@1: . %empty  [NOT, LOCAL, TRUE, FALSE, NIL, '-', PLUSPLUS, MINUSMINUS, '[', ']', '(', ',', COLONCOLON, ID, STRING, INTEGER, REAL]
   63 objectdef: '[' . $@1 elist ']'
   64          | '[' . indexed ']'
   65 indexed: . indexedelem
   66        | . indexed ',' indexedelem
   68 indexedelem: . '{' $@2 expr ':' expr '}'

    '{'  shift, and go to state 64

    $default  reduce using rule 62 ($@1)

    $@1          go to state 65
    indexed      go to state 66
    indexedelem  go to state 67


State 21

   14 expr: . assignexpr
   15     | . expr '+' expr
   16     | . expr '-' expr
   17     | . expr '*' expr
   18     | . expr '/' expr
   19     | . expr '%' expr
   20     | . expr GT expr
   21     | . expr GE expr
   22     | . expr LT expr
   23     | . expr LE expr
   24     | . expr EQ expr
   25     | . expr NE expr
   26     | . expr OR D expr
   27     | . expr AND D expr
   28     | . term
   30 term: . '(' expr ')'
   30     | '(' . expr ')'
   31     | . '-' expr
   32     | . NOT expr
   33     | . PLUSPLUS lvalue
   34     | . lvalue PLUSPLUS
   35     | . MINUSMINUS lvalue
   36     | . lvalue MINUSMINUS
   37     | . primary
   38 assignexpr: . lvalue '=' expr
   39 primary: . lvalue
   40        | . call
   41        | . objectdef
   42        | . '(' funcdef ')'
   42        | '(' . funcdef ')'
   43        | . const
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'
   54     | '(' . funcdef ')' '(' elist ')'
   63 objectdef: . '[' $@1 elist ']'
   64          | . '[' indexed ']'
   73 funcprefix: . FUNCTION funcname
   78 funcdef: . funcprefix funcargs funcbody
   79 const: . INTEGER
   80      | . STRING
   81      | . NIL
   82      | . TRUE
   83      | . FALSE
   84      | . REAL

    FUNCTION    shift, and go to state 7
    NOT         shift, and go to state 11
    LOCAL       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    NIL         shift, and go to state 15
    '-'         shift, and go to state 16
    PLUSPLUS    shift, and go to state 17
    MINUSMINUS  shift, and go to state 18
    '['         shift, and go to state 20
    '('         shift, and go to state 21
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24
    STRING      shift, and go to state 25
    INTEGER     shift, and go to state 26
    REAL        shift, and go to state 27

    expr        go to state 68
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    funcprefix  go to state 38
    funcdef     go to state 69
    const       go to state 40


State 22

   13 stmt: ';' .

    $default  reduce using rule 13 (stmt)


State 23

   46 lvalue: COLONCOLON . ID

    ID  shift, and go to state 70


State 24

   44 lvalue: ID .

    $default  reduce using rule 44 (lvalue)


State 25

   80 const: STRING .

    $default  reduce using rule 80 (const)


State 26

   79 const: INTEGER .

    $default  reduce using rule 79 (const)


State 27

   84 const: REAL .

    $default  reduce using rule 84 (const)


State 28

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


State 29

    4 stmt: expr . ';'
   15 expr: expr . '+' expr
   16     | expr . '-' expr
   17     | expr . '*' expr
   18     | expr . '/' expr
   19     | expr . '%' expr
   20     | expr . GT expr
   21     | expr . GE expr
   22     | expr . LT expr
   23     | expr . LE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . OR D expr
   27     | expr . AND D expr

    AND  shift, and go to state 71
    OR   shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '%'  shift, and go to state 77
    EQ   shift, and go to state 78
    NE   shift, and go to state 79
    LT   shift, and go to state 80
    GT   shift, and go to state 81
    GE   shift, and go to state 82
    LE   shift, and go to state 83
    ';'  shift, and go to state 84


State 30

   28 expr: term .

    $default  reduce using rule 28 (expr)


State 31

   14 expr: assignexpr .

    $default  reduce using rule 14 (expr)


State 32

   37 term: primary .

    $default  reduce using rule 37 (term)


State 33

   34 term: lvalue . PLUSPLUS
   36     | lvalue . MINUSMINUS
   38 assignexpr: lvalue . '=' expr
   39 primary: lvalue .  [AND, OR, '+', '-', '*', '/', '%', EQ, NE, LT, GT, GE, LE, '}', ']', ')', ';', ',', ':']
   48 member: lvalue . '.' ID
   49       | lvalue . '[' expr ']'
   53 call: lvalue . callsuffix
   55 callsuffix: . normcall
   56           | . methodcall
   57 normcall: . '(' elist ')'
   58 methodcall: . DOTDOT ID '(' elist ')'

    '='         shift, and go to state 85
    PLUSPLUS    shift, and go to state 86
    MINUSMINUS  shift, and go to state 87
    '['         shift, and go to state 88
    '('         shift, and go to state 89
    '.'         shift, and go to state 90
    DOTDOT      shift, and go to state 91

    $default  reduce using rule 39 (primary)

    callsuffix  go to state 92
    normcall    go to state 93
    methodcall  go to state 94


State 34

   47 lvalue: member .

    $default  reduce using rule 47 (lvalue)


State 35

   40 primary: call .  [AND, OR, '+', '-', '*', '/', '%', EQ, NE, LT, GT, GE, LE, '}', ']', ')', ';', ',', ':']
   50 member: call . '.' ID
   51       | call . '[' expr ']'
   52 call: call . '(' elist ')'

    '['  shift, and go to state 95
    '('  shift, and go to state 96
    '.'  shift, and go to state 97

    $default  reduce using rule 40 (primary)


State 36

   41 primary: objectdef .

    $default  reduce using rule 41 (primary)


State 37

   11 stmt: block .

    $default  reduce using rule 11 (stmt)


State 38

   76 funcargs: . '(' $@4 idlist ')' $@5
   78 funcdef: funcprefix . funcargs funcbody

    '('  shift, and go to state 98

    funcargs  go to state 99


State 39

   12 stmt: funcdef .

    $default  reduce using rule 12 (stmt)


State 40

   43 primary: const .

    $default  reduce using rule 43 (primary)


State 41

    4 stmt: . expr ';'
    5     | . ifstmt
    6     | . whilestmt
    7     | . forstmt
    8     | . returnstmt
    9     | . BREAK ';'
   10     | . CONTINUE ';'
   11     | . block
   12     | . funcdef
   13     | . ';'
   14 expr: . assignexpr
   15     | . expr '+' expr
   16     | . expr '-' expr
   17     | . expr '*' expr
   18     | . expr '/' expr
   19     | . expr '%' expr
   20     | . expr GT expr
   21     | . expr GE expr
   22     | . expr LT expr
   23     | . expr LE expr
   24     | . expr EQ expr
   25     | . expr NE expr
   26     | . expr OR D expr
   27     | . expr AND D expr
   28     | . term
   30 term: . '(' expr ')'
   31     | . '-' expr
   32     | . NOT expr
   33     | . PLUSPLUS lvalue
   34     | . lvalue PLUSPLUS
   35     | . MINUSMINUS lvalue
   36     | . lvalue MINUSMINUS
   37     | . primary
   38 assignexpr: . lvalue '=' expr
   39 primary: . lvalue
   40        | . call
   41        | . objectdef
   42        | . '(' funcdef ')'
   43        | . const
   44 lvalue: . ID
   45       | . LOCAL ID
   46       | . COLONCOLON ID
   47       | . member
   48 member: . lvalue '.' ID
   49       | . lvalue '[' expr ']'
   50       | . call '.' ID
   51       | . call '[' expr ']'
   52 call: . call '(' elist ')'
   53     | . lvalue callsuffix
   54     | . '(' funcdef ')' '(' elist ')'
   63 objectdef: . '[' $@1 elist ']'
   64          | . '[' indexed ']'
   70 block: . '{' $@3 stmts '}'
   73 funcprefix: . FUNCTION funcname
   78 funcdef: . funcprefix funcargs funcbody
   79 const: . INTEGER
   80      | . STRING
   81      | . NIL
   82      | . TRUE
   83      | . FALSE
   84      | . REAL
   89 ifprefix: . IF $@6 '(' expr ')'
   91 ifstmt: . ifprefix stmt
   91       | ifprefix . stmt
   93       | . ifprefix stmt elseprefix stmt $@7
   93       | ifprefix . stmt elseprefix stmt $@7
   94 whilestmt: . whilestart whilecond stmt
   95 whilestart: . WHILE
  100 forprefix: . FOR $@8 '(' elist ';' M expr ';'
  102 forstmt: . forprefix N elist ')' N stmt $@9 N
  103 returnstmt: . RETURN expr ';'
  104           | . RETURN ';'

    IF          shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    FUNCTION    shift, and go to state 7
    RETURN      shift, and go to state 8
    BREAK       shift, and go to state 9
    CONTINUE    shift, and go to state 10
    NOT         shift, and go to state 11
    LOCAL       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    NIL         shift, and go to state 15
    '-'         shift, and go to state 16
    PLUSPLUS    shift, and go to state 17
    MINUSMINUS  shift, and go to state 18
    '{'         shift, and go to state 19
    '['         shift, and go to state 20
    '('         shift, and go to state 21
    ';'         shift, and go to state 22
    COLONCOLON  shift, and go to state 23
    ID          shift, and go to state 24
    STRING      shift, and go to state 25
    INTEGER     shift, and go to state 26
    REAL        shift, and go to state 27

    stmt        go to state 100
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcprefix  go to state 38
    funcdef     go to state 39
    const       go to state 40
    ifprefix    go to state 41
    ifstmt      go to state 42
    whilestmt   go to state 43
    whilestart  go to state 44
    forprefix   go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 42

    5 stmt: ifstmt .

    $default  reduce using rule 5 (stmt)


State 43

    6 stmt: whilestmt .

    $default  reduce using rule 6 (stmt)


State 44

   94 whilestmt: whilestart . whilecond stmt
   96 whilecond: . '(' expr ')'

    '('  shift, and go to state 101

    whilecond  go to state 102


State 45

   97 N: . %empty
  102 forstmt: forprefix . N elist ')' N stmt $@9 N

    $default  reduce using rule 97 (N)

    N  go to state 103


State 46

    7 stmt: forstmt .

    $default  reduce using rule 7 (stmt)


State 47

    8 stmt: returnstmt .

    $default  reduce using rule 8 (stmt)


State 48

   89 ifprefix: IF $@6 . '(' expr ')'

    '('  shift, and go to state 104


State 49

  100 forprefix: FOR $@8 . '(' elist ';' M expr ';'

    '('  shift, and go to state 105


State 50

   71 funcname: ID .

    $default  reduce using rule 71 (funcname)


State 51

   73 funcprefix: FUNCTION funcname .

    $default  reduce using rule 73 (funcprefix)


State 52

  104 returnstmt: RETURN ';' .

    $default  reduce using rule 104 (returnstmt)


State 53

   15 expr: expr . '+' expr
   16     | expr . '-' expr
   17     | expr . '*' expr
   18     | expr . '/' expr
   19     | expr . '%' expr
   20     | expr . GT expr
   21     | expr . GE expr
   22     | expr . LT expr
   23     | expr . LE expr
   24     | expr . EQ expr
   25     | expr . NE expr
   26     | expr . OR D expr
   27     | expr . AND D expr
  103 returnstmt: RETURN expr . ';'

    AND  shift, and go to state 71
    OR   shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '%'  shift, and go to state 77
    EQ   shift, and go to state 78
    NE   shift, and go to state 79
    LT   shift, and go to state 80
    GT   shift, and go to state 81
    GE   shift, and go to state 82
    LE   shift, and go to state 83
    ';'  shift, and go to state 106


State 54

    9 stmt: BREAK ';' .

    $default  reduce using rule 9 (stmt)


State 55

   10 stmt: CONTINUE ';' .

    $default  reduce using rule 10 (stmt)


State 56
